Fixed modal and covered additional case

--- a/ui/components/app/modals/contract-details-modal/index.scss
+++ b/ui/components/app/modals/contract-details-modal/index.scss
@@ -22,10 +22,4 @@
       }
     }
   }
-
-  &__footer {
-    button + button {
-      margin-inline-start: 1rem;
-    }
-  }
 }
